# vpfs

./: Cargo.toml  README.md
plot/: local.txt  local_sl.txt  plot.gpl  plot.txt  remote.txt  remote_sl.txt
src/: daemon.rs  lib.rs  main.rs  messages.rs  sh.rs
tests/: tests.rs
