[package]
name = "vpfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_derive = "1.0"
serde_bare = "0.5.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.9.0"
lru = "0.14.0"

# [[bin]]
# name="client"

[[debug]]
debug=true
